# autostorage

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  alembic.ini  lefthook.yaml  pixi.toml  pyproject.toml  tbump.toml
.github/workflows/: docs.yml  release.yml  test.yml
docs/source/: conf.py  data-model.md  database.md  development.md  events.md  index.md  migrations.md  quickstart.md
examples/: __init__.py  example.db  helpers.py  orca_stationary.py  orca_transition.py  stationary.py  stationary_point.py  transition.py
examples/data/orca_stationary/: energy.inp  freq.engrad  freq.hess  freq.inp  freq.property.txt  freq.xyz  freq_trj.xyz  goat.finalensemble.xyz  goat.globalminimum.xyz  goat.inp  goat.property.txt  goat.xyz  goat_trj.xyz  init.xyz  opt.engrad  opt.inp  opt.property.txt  opt.xyz  opt_trj.xyz  submit.sh
examples/data/orca_transition/: energy.inp  energy.property.txt  energy_b.inp  energy_b.property.txt  energy_f.inp  energy_f.property.txt  freq.engrad  freq.hess  freq.inp  freq.property.txt  freq.xyz  freq_b.engrad  freq_b.hess  (+24 more)
migrations/: env.py
migrations/versions/: 4230f63e365f_add_geometry_hash.py  e50de3129c84_add_null_safe_indexes_reverse_lookup_.py  faa9f50bc029_baseline_current_schema.py
notebooks/: read.ipynb  schema.ipynb  select.ipynb
notebooks/test/: inp.xyz  opt.bibtex  opt.engrad  opt.gbw  opt.inp  opt.opt  opt.property.txt  opt.xtbrestart  opt.xyz  opt_trj.xyz
scripts/: init.sh  slurm-cache.sh  slurm-repos.sh
src/autostorage/: __init__.py  database.py  events.py  exc.py  merge.py  models.py  query.py  read.py  select.py  types.py  utils.py
src/autostore/: __init__.py  database.py  models.py
tests/: __init__.py  conftest.py  test_autostore.py  test_calcn.py  test_database.py  test_merge.py  test_migrations.py  test_models.py  test_parsers_registry.py  test_plot.py  test_query.py  test_select.py  test_types.py  test_utils.py
tests/data/: energy_program_output.json  test.xyz
(+32 files in other folders)
