[project]
name = "autostorage"
version = "0.0.9"
authors = [
    {name = "Andreas V. Copan", email = "avcopan@uga.edu"},
    {name = "Troy N. Smith", email = "troy.smith@uga.edu"}
]
requires-python = ">= 3.12"
dependencies = [
    "automol==0.0.18",
    "pint>=0.25.2",
    "sqlmodel>=0.0.31",
    "irmsd>=0.1.1",
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build<0.12"]

# UV build configurations
[tool.uv.build-backend]
module-name = "autostorage"

# Ruff configurations
[tool.ruff]
exclude = [
    "docs",
    "**/*.ipynb",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # missing trailing comma (handled by format)
    "TID252",   # relative import
    "D203",     # confict: incorrect blank line before class (uses D211 instead)
    "D213",     # conflict: multi-line summary second line (uses D212 instead)
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# Ty configurations
[tool.ty.environment]
python = ".pixi/envs/dev/bin/python"

[tool.ty.src]
include = [
    "src",
    "tests",
]

# Import-linter configurations
[tool.importlinter]
root_package = "autostorage"
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "Autostorage Layering"
type = "layers"
layers = [
    "autostorage.utils",
    "autostorage.database",
    "autostorage.events",
    "autostorage.models",
    "autostorage.types | autostorage.exc",
]

# Pytest configurations
[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = [
    "--doctest-modules",
    "--cov=autostorage",
    "--cov-report=term-missing",
    "--cov-report=html",
]
doctest_optionflags = "NORMALIZE_WHITESPACE"

# Pytest-cov configurations
[tool.coverage.run]
branch = true
source = ["autostorage"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80